# AirCELA

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  test_ollama.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aircela/: __init__.py  cli.py  device.py  engine.py  gguf.py  huggingface.py  prefetch.py  quantize.py  transformer.py
examples/: basic_generation.py  ollama_inference.py
